[BE] hotfix: @Slf4j제거하고 명시적 로깅 사용